@@ -423,7 +423,7 @@ static inline void* currentThreadStackBase()
     return static_cast<void*>(pTib->StackBase);
 #elif PLATFORM(WIN_OS) && PLATFORM(X86_64) && COMPILER(MSVC)
     PNT_TIB64 pTib = reinterpret_cast<PNT_TIB64>(NtCurrentTeb());
-    return static_cast<void*>(pTib->StackBase);
+    return reinterpret_cast<void*>(pTib->StackBase);
 #elif PLATFORM(WIN_OS) && PLATFORM(X86) && COMPILER(GCC)
     // offset 0x18 from the FS segment register gives a pointer to
     // the thread information block for the current thread
