@@ -96,4 +96,19 @@ String TextStream::release()
     return String::adopt(m_text);
 }
 
+#if PLATFORM(WIN_OS) && PLATFORM(X86_64) && COMPILER(MSVC)
+TextStream& TextStream::operator<<(__int64 i)
+{
+    char buffer[printBufferSize];
+    snprintf(buffer, sizeof(buffer) - 1, "%I64i", i);
+    return *this << buffer;
+}
+TextStream& TextStream::operator<<(unsigned __int64 i)
+{
+    char buffer[printBufferSize];
+    snprintf(buffer, sizeof(buffer) - 1, "%I64u", i);
+    return *this << buffer;
+}
+#endif
+
 }
