@@ -1,3 +1,15 @@
+2008-10-08  Prasanth Ullattil  <pullatti@trolltech.com>
+
+        Reviewed by Simon.
+
+        Fix compilation errors on VS2008 64Bit
+
+        * platform/text/TextStream.cpp:
+        (WebCore::TextStream::operator<<):
+        * platform/text/TextStream.h:
+        * plugins/win/PluginViewWin.cpp:
+        (WebCore::PluginView::init):
+
 2008-10-07  Alp Toker  <alp@nuanti.com>
 
         GTK+ build fix for older automake versions (1.7). Discussed in bug
