@@ -1,3 +1,12 @@
+2008-10-08  Prasanth Ullattil  <pullatti@trolltech.com>
+
+        Reviewed by Simon.
+
+        Fix compilation errors on VS2008 64Bit
+
+        * kjs/collector.cpp:
+        (JSC::currentThreadStackBase):
+
 2008-10-08  André Pönitz  <apoenitz@trolltech.com>
 
         Reviewed by Simon.
